samples/_failures_safe/1761317883_c9c54d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a44eed9.c: In function ‘main’:
./samples/SAFE/__tmp_7a44eed9.c:171:5: error: expected expression at end of input
  171 |     add_matrices(&mat1, &
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_7a44eed9.c:171:5: error: too few arguments to function ‘add_matrices’
./samples/SAFE/__tmp_7a44eed9.c:84:6: note: declared here
   84 | void add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_7a44eed9.c:171:5: error: expected declaration or statement at end of input
  171 |     add_matrices(&mat1, &
      |     ^~~~~~~~~~~~
